fix painting app alignment

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -304,5 +304,5 @@ canvas {
   border: 2px solid black;
   background: white;
   /* width: 800px;
-  height: 500px; */
+  height: 500px; 
 } */
